# halo2-verifier

./: .gitignore  Cargo.toml  README.md
examples/: common.rs  shuffle.rs  vector_mul.rs
halo2_verifier/: Cargo.toml
halo2_verifier/src/: arithmetic.rs  helpers.rs
halo2_verifier/src/plonk/: circuit.rs  lookup.rs  shuffle.rs  vanishing.rs  vk.rs
halo2_verifier/src/poly/: commitment.rs  mod.rs  multilinear.rs  query.rs
halo2_verifier/src/poly/kzg/: commitment.rs  msm.rs  strategy.rs
halo2_verifier/src/poly/kzg/multiopen/: gwc.rs  shplonk.rs
halo2_verifier/src/transcript/: blake2b.rs  mod.rs
halo2_verifier/tests/: shuffle.rs
serialize/: Cargo.toml
serialize/examples/: shuffle_e2e_verify.rs  vector_mul.rs
serialize/src/: lib.rs
src/: lib.rs  poly.rs  vk.rs
src/plonk/: lookup.rs  mod.rs  permutation.rs  vanishing.rs
src/tests/: mod.rs  shuffle.rs  vector_mul.rs
verifier/: Cargo.toml
verifier/src/: arithmetic.rs  helpers.rs  lib.rs
verifier/src/plonk/: circuit.rs  lookup.rs  mod.rs  permutation.rs  shuffle.rs  vanishing.rs  vk.rs
verifier/src/poly/: commitment.rs  domain.rs  mod.rs  multilinear.rs
verifier/src/poly/kzg/: commitment.rs  msm.rs  strategy.rs
verifier/src/poly/kzg/multiopen/: gwc.rs  shplonk.rs
verifier/src/transcript/: blake2b.rs  mod.rs
verifier/tests/: helpers.rs  shuffle.rs  vector_mul.rs
