[workspace]
members = [ 
    "serialize",
    "verifier",
]

resolver = "2"

[workspace.dependencies]
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3" }
ff = { version = "0.13.0", default-features = false }
group = "0.13" 
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.3.0" }
# halo2curves = { git = 'https://github.com/contrun/halo2curves.git', branch = "no-std", default-features = false }
halo2curves = { version = "=0.6.1", default-features = false }

[patch.crates-io]
halo2curves = { path = "../halo2curves-nostd", default-features = false }

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { path = "../halo2/halo2_proofs", default-features = false }
