[package]
name = "serialize"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "convert-params"
path = "bin/convert_params.rs"

[dependencies]
ff.workspace = true
group.workspace = true
halo2_proofs.workspace = true
halo2curves.workspace = true
halo2_verifier = { path = "../halo2_verifier" }



[dev-dependencies]
hex = { version = "0.4" }
rand.workspace = true
rand_chacha.workspace = true
